tests/NormalTests/paczka1/small_fuzzy/28026011.err
Error in line 4: r9EnW6el S249 97,3
Error in line 10: A835 A756 71,8
